--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ h1 {
   font-family: "Neuton", serif;
   color: #EBB746;
   margin: 0;
-  align-items: center
+  align-items: center;
   position: relative;
 }
 
