--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ h1 {
   font-family: "Neuton", serif;
   color: #Ebb746;
   margin: 0;
-  align-items: center;
   position: relative;
 }
 
@@ -38,13 +37,13 @@ p {
 
 @media only screen and (min-width: 25em) {
 
-  .chorus{
+  .chorus {
     align-items: center;
   }
 
-  .p1{
+  .p1 {
     left: 50%;
-    transform: translatex(-50%);
+    transform: translateX(-50%);
     top: 26%;
     width: 100%;
   }
