Remove quotations in font family

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ h1 {
 }
 
 .song {
-  font-family: "Neuton", serif;
+  font-family: Neuton, serif;
   color: #Ebb746;
   margin: 0;
   /* position: relative; */
